--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "23.0.0",
+    "jest-expo": "^25.0.0",
     "react-native-scripts": "1.8.1",
     "react-test-renderer": "16.0.0"
   },
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "apollo-client-preset": "^1.0.6",
-    "expo": "^24.0.0",
+    "expo": "^25.0.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
-    "react": "16.0.0",
+    "react": "16.2.0",
     "react-apollo": "^2.0.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-elements": "^0.19.0",
-    "react-navigation": "^1.0.0-beta.26"
+    "react-navigation": "^1.0.0-beta.27"
   }
 }
