--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^25.0.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
+    "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-apollo": "^2.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
