--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "16.2.0",
     "react-apollo": "^2.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-native-elements": "^0.19.0",
+    "react-native-elements": "^1.0.0-beta",
     "react-navigation": "^1.0.0-beta.27"
   }
 }
